2008-10-28  Cosimo Cecchi  <cosimoc@gnome.org>

	* daemon/gvfsbackendftp.c: (dir_default_init_data):
	Convert stuct tm from what ParseFTPList gives to what mktime expects.
	Fixes wrong date/time parsing for FTP files.
	Patch by Andreas Henriksson (#550837). 

2008-10-24  Tomas Bzatek  <tbzatek@redhat.com>

	* daemon/gvfsbackendsmb.c:
	Don't ask for credentials twice when the password dialog was cancelled

2008-10-24  Alexander Larsson  <alexl@redhat.com>

	* programs/gvfs-info.c (show_attributes):
	Don't show fallback setting for GThemedIcon (this is a construct only property).
	List icons on same line.

2008-10-23  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsftp.c:
        * daemon/gvfsbackendsmb.c:
        * daemon/gvfsdaemonutils.c:
	Don't return fallback icons, since that gives problems
	with custom mime icons (#528320)

2008-10-21  Alexander Larsson  <alexl@redhat.com>

	Patch from David Zeuthen (#557182)
	
        * common/Makefile.am:
        * common/gvfsicon.[ch]:
	Added GVfsIcon object for GVfs backend specific icons.
	
        * common/gmountspec.[ch]:
	Make sure to/from string works correctly to roundtrip GMountSpec:s
	Make GMountSpec a boxed type
	
        * common/gvfsdaemonprotocol.h:
	Add OpenIconForRead operation
	
        * client/Makefile.am:
        * client/gvfsiconloadable.[ch]:
	In gvfs client side, implement GLoadableIcon for GVfsIcon type.
	
        * client/gdaemonvfs.c:
	Make sure that we add the GLoadableIcon interface for GVfsIcon on load
	
        * daemon/Makefile.am:
        * daemon/gvfsbackend.[ch]:
        * daemon/gvfsjobopeniconforread.[ch]:
	Add new job type for OpenIconForRead op
	
        * daemon/gvfsbackendgphoto2.c:
	Implement OpenIconForRead for icon previews.

2008-10-21  Alexander Larsson  <alexl@redhat.com>

        * configure.ac:
	Require glib 2.19.1 for GIcon serialization support
	
        * common/gvfsdaemonprotocol.c:
	Use g_icon_to_string & co instead of home-brewed serialization
	